# blendals

./: .gitignore  LICENSE.txt  README.md  Wortflow.md  main.py  pyproject.toml
addons/blendals/: __init__.py  parse_song.py  song.py
addons/blendals/blender_modules/import_song/: __init__.py  midi_track_info.py  parse_song.py  song_info.py
addons/blendals/blnder_utils/: collection.py  enums.py
addons/blendals/curve_generators/: __init__.py  audio_track_to_curve.py  curve_manipulations.py  frame_calculator.py  midi_track_to_curve.py
addons/blendals/data/: song.py
blendals/: cli.py  config.py  extract_wave_from_audio_file.py  frame_calculator.py  live_set.py  live_set_parser.py  live_set_to_song.py  load_song_from_file.py  song.py  types.py
blendals/blender/: audio.py  control.py  controls_animation_generator.py  create_controls_collection.py  enums.py  main.py  timeline_markers.py
blendals/blender/animations/: __init__.py  scale_animation.py
blendals/blender/curve_generators/: audio_track_to_curve.py  curve_manipulations.py  midi_track_to_curve.py
blendals/utils/: xml.py
blendals_/: cli.py  config.py  frame_calculator.py  load_song_from_file.py
blendals_/blender/: audio.py  control.py  create_controls_collection.py  main.py  timeline_markers.py
blendals_/blender/curve_generators/: audio_track_to_curve.py  curve_manipulations.py  midi_track_to_curve.py
develop/: Extract sound wave.ipynb
song_example/: song.json
