[tool.poetry]
name = "blendals"
version = "0.1.0"
description = ""
authors = ["Dmytro Kostochko <alerion.um@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.7.0"
rich = "^13.2.0"
lxml = "^4.9.2"

[tool.poetry.dev-dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
